# Distributed-Server-Client-Files-Storage

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.cpp  client.h  client_configuration.h  communication_protocol.cpp  communication_protocol.h  err.cpp  err.h  helper.cpp  helper.h  inet_socket.cpp  inet_socket.h  netstore-client.cpp  netstore-server.cpp  netstore_client.cpp  netstore_server.cpp  run_client.sh  run_server.sh  server.cpp  server.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
client/: client.cpp  client.h  netstore_client.cpp
client1_storage/: file white space wtf  viva_la_vida
client2_storage/: client_file
client_storage/: client_file
client_storage1/: client_file
protocol/: communication_protocol.cpp  communication_protocol.h
server/: netstore_server.cpp  server.cpp  server.h  server_configuration.h
server1_storage/: imagine_dragons_believer  inny_pliczek
socket/: inet_socket.cpp  inet_socket.h  udp_socket.cpp
utilities/: helper.cpp  helper.h  logger.cpp  logger.h
